Bug 1590 - Should use IRQ resource type found in handling possible IRQ list
Summary: Should use IRQ resource type found in handling possible IRQ list
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Interrupts (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Len Brown
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-11-25 03:26 UTC by Luming Yu
Modified: 2004-04-12 22:30 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
a patch for fixing this issue (1.34 KB, patch)
2003-11-25 03:34 UTC, Luming Yu
Details | Diff

Description Luming Yu 2003-11-25 03:26:17 UTC
Distribution:
RH 

Hardware Environment:
ALL

Software Environment:
2.6.0-test10

Problem Description:
We should use IRQ resource type found in handling possible IRQ list, rather 
than just guess like below code:
  if(irq <= 15)
     resource_type = ACPI_RSTYPE_IRQ
  else
     resource_type = ACPI_RSTYPE_EXT_IRQ
Comment 1 Luming Yu 2003-11-25 03:34:24 UTC
Created attachment 1525 [details]
a patch for fixing this issue
Comment 2 Len Brown 2004-04-12 22:30:10 UTC
integrated into 2.4.26 and 2.6.5, closing. 

Note You need to log in before you can comment on or make changes to this bug.