net/ipv4/igmp.c
@@ -1205,6 +1205,9 @@ void ip_mc_down(struct in_device *in_dev)
 
 	ASSERT_RTNL();
 
+	if (!in_dev->mc_initted)
+		return;
+
 #ifdef CONFIG_IP_MULTICAST
 	in_dev->mr_ifc_count = 0;
 	if (del_timer(&in_dev->mr_ifc_timer))
@@ -1250,6 +1253,8 @@ void ip_mc_up(struct in_device *in_dev)
 
 	for (i=in_dev->mc_list; i; i=i->next)
 		igmp_group_added(i);
+
+	in_dev->mc_initted = 1;
 }
 
 /*
